Aggiunto header : barra di navigazione

--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <!-- menù navigazione top -->
+        <nav class="nav-top">
+            <ul>
+                <li><a href="#"><i class="fas fa-th"></i> Speaker View</a></li>
+                <li><a href="#"><i class="fas fa-expand-arrows-alt"></i></a></li>
+            </ul>
+        </nav>
+        <!-- /menù navigazione top -->
+    </header>
+
     <main></main>
+
     <footer></footer>
 </body>
 </html>
