--- a/index.html
+++ b/index.html
@@ -1,34 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zoom</title>
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <!-- /Google Fonts -->
-    <!-- Fontawesome cdn -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- /Fontawesome cdn -->
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <!-- menù navigazione top -->
-        <nav class="nav-top">
-            <ul>
-                <li><a href="#"><i class="fas fa-th"></i> Speaker View</a></li>
-                <li><a href="#"><i class="fas fa-expand-arrows-alt"></i></a></li>
-            </ul>
-        </nav>
-        <!-- /menù navigazione top -->
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Zoom</title>
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+        <!-- /Google Fonts -->
+        <!-- Fontawesome cdn -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- /Fontawesome cdn -->
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <header>
+            <!-- menù navigazione top -->
+            <nav class="nav-top">
+                <ul>
+                    <li><a href="#"><i class="fas fa-th"></i> Speaker View</a></li>
+                    <li><a href="#"><i class="fas fa-expand-arrows-alt"></i></a></li>
+                </ul>
+            </nav>
+            <!-- /menù navigazione top -->
+        </header>
 
-    <main></main>
+        <main>
+            <!-- Riga numero 1 -->
+            <section class="row">
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+            </section>
+            <!-- /Riga numero 1 -->
 
-    <footer></footer>
-</body>
+            <!-- Riga numero 2 -->
+            <section class="row">
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+            </section>
+            <!-- /Riga numero 2 -->
+
+            <!-- Riga numero 3 -->
+            <section class="row">
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+            </section>
+            <!-- /Riga numero 3 -->
+
+            <!-- Riga numero 4 -->
+            <section class="row">
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+            </section>
+            <!-- /Riga numero 4 -->
+
+            <!-- Riga numero 5 -->
+            <section class="row">
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+                <div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div><div class="user">
+                    <img src="img/cane.jpeg" alt="img-user">
+                    <span class="user-name"><i class="fas fa-microphone-slash"></i> Pinco Pallo</span>
+                </div>
+            </section>
+            <!-- /Riga numero 5 -->
+        </main>
+
+        <footer></footer>
+    </body>
 </html>
