Aggiunto menù bottom + correzioni

--- a/index.html
+++ b/index.html
@@ -154,6 +154,116 @@
             <!-- /Riga numero 5 -->
         </main>
 
-        <footer></footer>
+        <footer>
+            <!-- Bottoni menù bottom -->
+            <nav class="row nav-bottom">
+                <!-- menù in basso sx -->
+                <section class="row bottom-left">
+                    <!-- Muto microfono-->
+                    <button class="action">
+                        <i class="fas fa-microphone fa-2x"></i>
+                        <span>Mute</span>
+                    </button>
+                    <!-- /Muto microfono-->
+
+                    <!-- azioni microfono-->
+                    <button class="action more-actions">
+                        <i class="fas fa-angle-up"></i>
+                    </button>
+                    <!-- /azioni microfono-->
+
+                    <!-- Stop video -->
+                    <button class="action">
+                        <i class="fas fa-video fa-2x"></i>
+                        <span>Stop Video</span>
+                    </button>
+                    <!-- /Stop video -->
+
+                    <!-- azioni stop video-->
+                    <button class="action more-actions">
+                        <i class="fas fa-angle-up"></i>
+                    </button>
+                    <!-- /azioni stop video-->
+                </section>
+                <!-- /menù in basso sx -->
+                
+                <!-- /menù in basso centro -->
+                <section class="row bottom-center">
+                    <!-- Invite -->
+                    <button class="action">
+                        <i class="fas fa-user-plus fa-2x"></i>
+                        <span>Invite</span>
+                    </button>
+                    <!-- /Invite -->
+
+                    <!-- Manage Participants -->
+                    <button class="action">
+                        <i class="fas fa-user-friends fa-2x"></i>
+                        <span>Manage Participants</span>
+                    </button>
+                    <!-- /Manage Participants -->
+
+                    <!-- Polling -->
+                    <button class="action">
+                        <i class="fas fa-chart-bar fa-2x"></i>
+                        <span>Polling</span>
+                    </button>
+                    <!-- /Polling -->
+
+                    <!-- Share Screen -->
+                    <button class="action">
+                        <i style="color: #4bc800;" class="fas fa-share-square fa-2x"></i>
+                        <span>Share Screen</span>
+                    </button>
+                    <!-- /Share Screen -->
+
+                    <!-- Azioni chat -->
+                    <button class="action more-actions">
+                        <i class="fas fa-angle-up"></i>
+                    </button>
+                    <!-- /Azioni chat -->
+
+                    <!-- Chat -->
+                    <button class="action">
+                        <i class="fas fa-comment fa-2x"></i>
+                        <span>Chat</span>
+                    </button>
+                    <!-- /Chat -->
+
+                    <!-- Record -->
+                    <button class="action">
+                        <i class="fas fa-record-vinyl fa-2x"></i>
+                        <span>Record</span>
+                    </button>
+                    <!-- /Record -->
+
+                    <!-- Breakout Rooms -->
+                    <button class="action">
+                        <i class="fas fa-th-large fa-2x"></i>
+                        <span>Breakout Rooms</span>
+                    </button>
+                    <!-- /Breakout Rooms -->
+
+                    <!-- More -->
+                    <button class="action">
+                        <i class="fas fa-ellipsis-h fa-2x"></i>
+                        <span>More</span>
+                    </button>
+                    <!-- /More -->
+                </section>
+                <!-- /menù in basso centro -->
+
+                <!-- /menù in basso dx -->
+                <section class="row bottom-right">
+                    <!-- End Meeting -->
+                    <button class="action end-call">
+                        <h3>End Meeting</h3>
+                    </button>
+                    <!-- /End Meeting -->
+                </section>
+                <!-- /menù in basso dx -->
+            </nav>
+            <!-- /Bottoni menù bottom -->
+        </footer>
     </body>
 </html>
