--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
                     <!-- Share Screen -->
                     <button class="action">
-                        <i style="color: #4bc800;" class="fas fa-share-square fa-2x"></i>
+                        <i id="share-screen" class="fas fa-share-square fa-2x"></i>
                         <span>Share Screen</span>
                     </button>
                     <!-- /Share Screen -->
