Corretto e aggiunto effetti ai bottoni footer

--- a/index.html
+++ b/index.html
@@ -159,31 +159,35 @@
             <nav class="row nav-bottom">
                 <!-- menù in basso sx -->
                 <section class="row bottom-left">
-                    <!-- Muto microfono-->
-                    <button class="action">
-                        <i class="fas fa-microphone fa-2x"></i>
-                        <span>Mute</span>
-                    </button>
-                    <!-- /Muto microfono-->
+                    <div class="same-button">
+                        <!-- Muto microfono-->
+                        <button class="action">
+                            <i class="fas fa-microphone fa-2x"></i>
+                            <span>Mute</span>
+                        </button>
+                        <!-- /Muto microfono-->
 
-                    <!-- azioni microfono-->
-                    <button class="action more-actions">
-                        <i class="fas fa-angle-up"></i>
-                    </button>
-                    <!-- /azioni microfono-->
+                        <!-- azioni microfono-->
+                        <button class="action more-actions">
+                            <i class="fas fa-angle-up"></i>
+                        </button>
+                        <!-- /azioni microfono-->
+                    </div>
 
-                    <!-- Stop video -->
-                    <button class="action">
-                        <i class="fas fa-video fa-2x"></i>
-                        <span>Stop Video</span>
-                    </button>
-                    <!-- /Stop video -->
+                    <div class="same-button">
+                        <!-- Stop video -->
+                        <button class="action">
+                            <i class="fas fa-video fa-2x"></i>
+                            <span>Stop Video</span>
+                        </button>
+                        <!-- /Stop video -->
 
-                    <!-- azioni stop video-->
-                    <button class="action more-actions">
-                        <i class="fas fa-angle-up"></i>
-                    </button>
-                    <!-- /azioni stop video-->
+                        <!-- azioni stop video-->
+                        <button class="action more-actions">
+                            <i class="fas fa-angle-up"></i>
+                        </button>
+                        <!-- /azioni stop video-->
+                    </div>
                 </section>
                 <!-- /menù in basso sx -->
                 
@@ -211,24 +215,26 @@
                     <!-- /Polling -->
 
                     <!-- Share Screen -->
-                    <button class="action">
-                        <i id="share-screen" class="fas fa-share-square fa-2x"></i>
+                    <button class="action" id="share-screen">
+                        <i class="fas fa-share-square fa-2x"></i>
                         <span>Share Screen</span>
                     </button>
                     <!-- /Share Screen -->
 
-                    <!-- Azioni chat -->
-                    <button class="action more-actions">
-                        <i class="fas fa-angle-up"></i>
-                    </button>
-                    <!-- /Azioni chat -->
+                    <div class="same-button">
+                        <!-- Azioni chat -->
+                        <button class="action more-actions">
+                            <i class="fas fa-angle-up"></i>
+                        </button>
+                        <!-- /Azioni chat -->
 
-                    <!-- Chat -->
-                    <button class="action">
-                        <i class="fas fa-comment fa-2x"></i>
-                        <span>Chat</span>
-                    </button>
-                    <!-- /Chat -->
+                        <!-- Chat -->
+                        <button class="action">
+                            <i class="fas fa-comment fa-2x"></i>
+                            <span>Chat</span>
+                        </button>
+                        <!-- /Chat -->
+                    </div>
 
                     <!-- Record -->
                     <button class="action">
